--- a/html.html
+++ b/html.html
@@ -1,1 +1,33 @@
 
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sklep z ebookami o tradingu</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Sklep z ebookami o tradingu</h1>
+    </header>
+    <div class="container">
+        <div class="product">
+            <img src="ebook1.jpg" alt="Ebook 1">
+            <div>
+                <h2>Ebook o podstawach tradingu</h2>
+                <p>Opis produktu: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae tortor vel ante dapibus fringilla. Vivamus vel arcu auctor, vehicula leo ac, malesuada libero.</p>
+                <a href="platnosc.html" class="buy-btn">Kup teraz</a>
+            </div>
+        </div>
+        <div class="product">
+            <img src="ebook2.jpg" alt="Ebook 2">
+            <div>
+                <h2>Ebook o zaawansowanych strategiach tradingowych</h2>
+                <p>Opis produktu: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae tortor vel ante dapibus fringilla. Vivamus vel arcu auctor, vehicula leo ac, malesuada libero.</p>
+                <a href="platnosc.html" class="buy-btn">Kup teraz</a>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
