--- a/html.html
+++ b/html.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -16,7 +15,8 @@
             <img src="ebook1.jpg" alt="Ebook 1">
             <div>
                 <h2>Ebook o podstawach tradingu</h2>
-                <p>Opis produktu: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae tortor vel ante dapibus fringilla. Vivamus vel arcu auctor, vehicula leo ac, malesuada libero.</p>
+                <p>Opis produktu: Ten ebook to doskonałe wprowadzenie do świata tradingu. Dowiesz się z niego podstawowych pojęć, strategii i narzędzi, które są niezbędne dla początkujących traderów. Wytłumaczone krok po kroku, w przystępny sposób.</p>
+                <p><strong>Zaawansowane:</strong> Po zapoznaniu się z tą książką będziesz gotowy/a do rozpoczęcia swojej przygody z tradingiem na rynkach finansowych.</p>
                 <a href="platnosc.html" class="buy-btn">Kup teraz</a>
             </div>
         </div>
@@ -24,7 +24,8 @@
             <img src="ebook2.jpg" alt="Ebook 2">
             <div>
                 <h2>Ebook o zaawansowanych strategiach tradingowych</h2>
-                <p>Opis produktu: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae tortor vel ante dapibus fringilla. Vivamus vel arcu auctor, vehicula leo ac, malesuada libero.</p>
+                <p>Opis produktu: Ten ebook to zaawansowane omówienie strategii i technik tradingowych. Znajdziesz tu informacje na temat analizy technicznej i fundamentalnej, zarządzania ryzykiem, oraz strategii inwestycyjnych stosowanych przez doświadczonych traderów.</p>
+                <p><strong>Zaawansowane:</strong> Po przeczytaniu tego ebooka będziesz miał/a solidną wiedzę na temat bardziej zaawansowanych aspektów tradingu i będziesz w stanie opracować własne strategie inwestycyjne.</p>
                 <a href="platnosc.html" class="buy-btn">Kup teraz</a>
             </div>
         </div>
