--- a/html.html
+++ b/html.html
@@ -15,8 +15,9 @@
             <img src="ebook1.jpg" alt="Ebook 1">
             <div>
                 <h2>Ebook o podstawach tradingu</h2>
-                <p>Opis produktu: Ten ebook to doskonałe wprowadzenie do świata tradingu. Dowiesz się z niego podstawowych pojęć, strategii i narzędzi, które są niezbędne dla początkujących traderów. Wytłumaczone krok po kroku, w przystępny sposób.</p>
-                <p><strong>Zaawansowane:</strong> Po zapoznaniu się z tą książką będziesz gotowy/a do rozpoczęcia swojej przygody z tradingiem na rynkach finansowych.</p>
+                <p>Ten ebook to doskonałe wprowadzenie do świata tradingu. Dowiesz się z niego podstawowych pojęć, strategii i narzędzi, które są niezbędne dla początkujących traderów. Wytłumaczone krok po kroku, w przystępny sposób.</p>
+                <p> Po zapoznaniu się z tą książką będziesz gotowy/a do rozpoczęcia swojej przygody z tradingiem na rynkach finansowych.</p>
+                <p><strong>Cena:</strong> $29.99</p>
                 <a href="platnosc.html" class="buy-btn">Kup teraz</a>
             </div>
         </div>
@@ -24,8 +25,9 @@
             <img src="ebook2.jpg" alt="Ebook 2">
             <div>
                 <h2>Ebook o zaawansowanych strategiach tradingowych</h2>
-                <p>Opis produktu: Ten ebook to zaawansowane omówienie strategii i technik tradingowych. Znajdziesz tu informacje na temat analizy technicznej i fundamentalnej, zarządzania ryzykiem, oraz strategii inwestycyjnych stosowanych przez doświadczonych traderów.</p>
-                <p><strong>Zaawansowane:</strong> Po przeczytaniu tego ebooka będziesz miał/a solidną wiedzę na temat bardziej zaawansowanych aspektów tradingu i będziesz w stanie opracować własne strategie inwestycyjne.</p>
+                <p>Ten ebook to zaawansowane omówienie strategii i technik tradingowych. Znajdziesz tu informacje na temat analizy technicznej i fundamentalnej, zarządzania ryzykiem, oraz strategii inwestycyjnych stosowanych przez doświadczonych traderów.</p>
+                <p> Po przeczytaniu tego ebooka będziesz miał/a solidną wiedzę na temat bardziej zaawansowanych aspektów tradingu i będziesz w stanie opracować własne strategie inwestycyjne.</p>
+                <p><strong>Cena:</strong> $39.99</p>
                 <a href="platnosc.html" class="buy-btn">Kup teraz</a>
             </div>
         </div>
