--- a/html.html
+++ b/html.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="ebook-info">
                     <p><strong>Tytuł:</strong> Tajniki Tradingu</p>
-                    <p><strong>Autor:</strong> Jan Kowalski</p>
+                    <p><strong>Autor:</strong> Day Trading 777</p>
                     <p><strong class="price-frame price-animation">Cena:</strong> 30 PLN</p>
                     <button onclick="window.location.href='https://twojastronaplatnosci.com';">Kup Teraz</button>
                 </div>
