--- a/html.html
+++ b/html.html
@@ -161,7 +161,10 @@
 
         <section class="frame" id="o_autorze" style="display: none;" style="text-align: center;">
             <h2 style="text-align: center;">O Autorze</h2>
-            <p>Autor jest doświadczonym traderem, który ma wieloletnie doświadczenie na rynkach finansowych. </p>
+            <p>XYZ jest doświadczonym traderem, który ma wieloletnie doświadczenie na rynkach finansowych. </p>
+                <p>XYZ jest doświadczonym traderem oraz ekspertem w dziedzinie rynków finansowych. Posiada wieloletnie doświadczenie w handlu akcjami, walutami, surowcami i kryptowalutami. Jest autorem kilku bestsellerowych książek o tradingu, które pomogły tysiącom osób osiągnąć sukces na giełdzie.</p>
+        <p>XYZ jest również wykładowcą na prestiżowych konferencjach i szkoleniach z zakresu tradingu. Jego wiedza i doświadczenie są doceniane przez społeczność inwestycyjną, a jego praktyczne podejście do tematu sprawia, że jego materiały są łatwo przyswajalne dla każdego.</p>
+        <p>Zapoznaj się z najnowszym ebookiem XYZ i poszerz swoją wiedzę na temat tradingu!</p>
         </section>
 
         <footer>
