--- a/html.html
+++ b/html.html
@@ -129,7 +129,7 @@
                     <p><strong>Tytuł:</strong> Tajniki Tradingu</p>
                     <p><strong>Autor:</strong> Day Trading 777</p>
                     <p><strong class="price-frame price-animation">Cena:</strong> 30 PLN</p>
-                    <button onclick="window.location.href='https://twojastronaplatnosci.com';">Kup Teraz</button>
+                    <button onclick="window.location.href='https://www.paypal.com/donate/?hosted_button_id=4PNN4NZWD2K4U';">Kup Teraz</button>
                 </div>
             </div>
         </section>
