--- a/html.html
+++ b/html.html
@@ -9,6 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprzedaż Ebooka o Tradingu</title>
     <link rel="stylesheet" href="styles.css">
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+      
+        gtag('config', 'G-TMYYH2EFSG');
+    </script>
+    
 </head>
 <body>
     <div class="container">
@@ -167,8 +177,13 @@
         <p>Zapoznaj się z najnowszym ebookiem XYZ i poszerz swoją wiedzę na temat tradingu!</p>
         </section>
 
+        <section id="visit-counter" style="text-align: center;">
+            <h2>Liczba odwiedzających w ciągu ostatnich 24 godzin:</h2>
+            <p id="visitor-count">0</p>
+        </section>
+
         <footer>
-            <p>&copy; 2023 Ebook o Tradingu. Wszelkie prawa zastrzeżone.</p>
+            <p>&copy; 2024 Ebook o Tradingu. Wszelkie prawa zastrzeżone.</p>
             <p><a href="regulamin.html" target="_blank" style="color: white;">Regulamin</a></p>
         </footer>
     </div>
