--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="products">
         <h2>Nasze Produkty</h2>
         <div class="product">
-            <img src="ebook.html" alt="E-papieros 1">
+            <img src="ebook.jpg" alt="E-papieros 1">
             <h3>E-papieros 1</h3>
             <p>Opis produktu 1.</p>
             <p class="price">50 PLN</p>
