--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
 
     <section id="products">
         <h2>Nasze Produkty</h2>
-        <div class="product">
-            <img src="ebook.jpg" alt="E-papieros 1">
-            <h3>E-papieros 1</h3>
-            <p>Opis produktu 1.</p>
-            <p class="price">50 PLN</p>
-            <button class="buy-button">Kup teraz</button>
+        <div class="products-grid">
+            <div class="product">
+                <img src="ebook.jpg" alt="E-papieros 1">
+                <h3>E-papieros 1</h3>
+                <p>Opis produktu 1.</p>
+                <p class="price">50 PLN</p>
+                <button class="buy-button">Kup teraz</button>
+            </div>
+            <div class="product">
+                <img src="ebook.jpg" alt="E-papieros 2">
+                <h3>E-papieros 2</h3>
+                <p>Opis produktu 2.</p>
+                <p class="price">60 PLN</p>
+                <button class="buy-button">Kup teraz</button>
+            </div>
+            <!-- Dodaj więcej produktów według potrzeb -->
         </div>
-        <div class="product">
-            <img src="ebook.jpg" alt="E-papieros 2">
-            <h3>E-papieros 2</h3>
-            <p>Opis produktu 2.</p>
-            <p class="price">60 PLN</p>
-            <button class="buy-button">Kup teraz</button>
-        </div>
-        <!-- Dodaj więcej produktów według potrzeb -->
     </section>
 
     <section id="contact">
