--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="contact">
         <h2>Kontakt</h2>
         <p>Masz pytania? Skontaktuj się z nami!</p>
-        <form>
+        <form action="send_email.php" method="post">
             <label for="name">Imię:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
