--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-papierosy Jednorazoweq</title>
+    <title>E-papierosy Jednorazowe</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="scripts.js"></script>
 </head>
@@ -12,8 +12,8 @@
         <h1>E-papierosy Jednorazowe</h1>
         <nav>
             <ul>
-                <li><a href="#home">Strona Główna</a></li>
-                <li><a href="#products">Produkty</a></li>
+                <li><a href="#home" class="nav-link">Strona Główna</a></li>
+                <li><a href="#products" class="nav-link">Produkty</a></li>
                 <li><a href="#" id="contact-link">Kontakt</a></li>
             </ul>
         </nav>
