--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     <section id="contact" style="display: none;">
         <h2>Kontakt</h2>
         <p>Masz pytania? Skontaktuj się z nami!</p>
-        <form action="send_email.php" method="post">
-            <label for="name">Imię:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message">Wiadomość:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Wyślij</button>
-        </form>
+       <form action="https://formspree.io/hedphdo@gmail.com" method="POST">
+    <label for="name">Imię:</label>
+    <input type="text" id="name" name="name" required>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="_replyto" required>
+    <label for="message">Wiadomość:</label>
+    <textarea id="message" name="message" required></textarea>
+    <button type="submit">Wyślij</button>
+</form>
     </section>
 
     <footer>
