--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
     <section id="contact" style="display: none;">
         <h2>Kontakt</h2>
         <p>Masz pytania? Skontaktuj się z nami!</p>
-       <form action="https://formspree.io/hedphdo@gmail.com" method="POST">
+       <form
+  action="https://formspree.io/f/mvgppzej"
+  method="POST"
+           >
     <label for="name">Imię:</label>
     <input type="text" id="name" name="name" required>
     <label for="email">Email:</label>
