--- a/index.html
+++ b/index.html
@@ -65,5 +65,15 @@
     <footer>
         <p>&copy; 2024 E-papierosy Jednorazowe. Wszelkie prawa zastrzeżone.</p>
     </footer>
+
+    <script src="scripts.js"></script>
+    <script>
+        function handleFormSubmit() {
+            // Po wysłaniu formularza, przekieruj na stronę główną
+            window.location.href = "index.html";
+            return true; // Zwróć true, aby kontynuować standardowe wysyłanie formularza
+        }
+    </script>
+    
 </body>
 </html>
