--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>Masz pytania? Skontaktuj się z nami!</p>
        <form
   action="https://formspree.io/f/mvgppzej"
-  method="POST"
+  method="POST onsubmit="return handleFormSubmit()"
            >
     <label for="name">Imię:</label>
     <input type="text" id="name" name="name" required>
