--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-papierosy Jednorazo3qwe</title>
+    <title>E-papierosy Jednorazowe</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="scripts.js"></script>
 </head>
 <body>
     <header>
@@ -14,7 +13,7 @@
             <ul>
                 <li><a href="#home" class="nav-link">Strona Główna</a></li>
                 <li><a href="#products" class="nav-link">Produkty</a></li>
-                <li><a href="#" id="contact-link">Kontakt</a></li>
+                <!-- Usunięty link do kontaktu -->
             </ul>
         </nav>
     </header>
@@ -45,35 +44,10 @@
         </div>
     </section>
 
-    <section id="contact" style="display: none;">
-        <h2>Kontakt</h2>
-        <p>Masz pytania? Skontaktuj się z nami!</p>
-       <form
-  action="https://formspree.io/f/mvgppzej"
-  method="POST onsubmit="return handleFormSubmit()"
-           >
-    <label for="name">Imię:</label>
-    <input type="text" id="name" name="name" required>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="_replyto" required>
-    <label for="message">Wiadomość:</label>
-    <textarea id="message" name="message" required></textarea>
-    <button type="submit">Wyślij</button>
-</form>
-    </section>
-
     <footer>
         <p>&copy; 2024 E-papierosy Jednorazowe. Wszelkie prawa zastrzeżone.</p>
     </footer>
 
     <script src="scripts.js"></script>
-    <script>
-        function handleFormSubmit() {
-            // Po wysłaniu formularza, przekieruj na stronę główną
-            window.location.href = "index.html";
-            return true; // Zwróć true, aby kontynuować standardowe wysyłanie formularza
-        }
-    </script>
-    
 </body>
 </html>
